overlays/spain/replica_count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: taco-cloud
  name: taco-cloud

spec:
  replicas: 3
  template:
    spec:
      affinity:
        podAntiAffinity: 
          preferredDuringSchedulingIgnoredDuringExecution: 
          - weight: 100  
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: team 
                  operator: In 
                  values:
                  - sanacloud
              topologyKey: kubernetes.io/hostname
