overlays/spain/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: taco-cloud
    kind: front
    lang: spring
    project: taco-cloud
    region: westeurope
    variant: development
  name: taco-cloud-nodeport
  namespace: taco-cloud
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30007
  selector:
    app: taco-cloud
    variant: development
